# Brief_MLOPS_ML_Factory

./: .env  Projet_2_1_MLFactory.md  README.md  docker-compose.yml  init_minio.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  train_register.py
api/: main.py  model_loader.py
data/: iris_test.csv
router/: ai_router.py  context_compressor.py  skill_classifier.py  token_budget.py
src/api/: Dockerfile  main.py  model_loader.py  pyproject.toml
src/front/: Dockerfile  app.py  pyproject.toml
src/train/: train.py
