[project]
name = "brief-mlops-ml-factory"
version = "0.1.0"
description = "ML Factory with intelligent AI Router"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.36.0",
    "fastapi>=0.115.0",
    "mlflow==2.17.2",
    "pydantic>=2.10.0",
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
    "setuptools>=69.0,<72.0",
    "uvicorn>=0.34.0",
]
